--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ allprojects {
             url 'https://maven.google.com/'
         }
         maven {
-            url "https://www.jitpack.io"
+            url "https://jitpack.io"
         }
     }
 }
