--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,14 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter()
         maven {
             url 'https://maven.google.com/'
         }
         maven {
             url "https://jitpack.io"
+        }
+        maven {
+            url "https://oss.jfrog.org/libs-snapshot"
         }
     }
 }
