--- a/core/build.gradle
+++ b/core/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -31,25 +32,27 @@ android {
 
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation "androidx.cardview:cardview:1.0.0"
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
-    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
-    implementation 'com.google.code.gson:gson:2.8.7'
+    api 'androidx.appcompat:appcompat:1.3.1'
+    api 'com.google.android.material:material:1.4.0'
+    api 'androidx.constraintlayout:constraintlayout:2.0.4'
+    api 'com.google.firebase:firebase-core:19.0.0'
+    testApi 'junit:junit:4.+'
+    androidTestApi 'androidx.test.ext:junit:1.1.2'
+    androidTestApi 'androidx.test.espresso:espresso-core:3.4.0'
+    api "androidx.cardview:cardview:1.0.0"
+    api "androidx.recyclerview:recyclerview:1.2.1"
+    api "androidx.recyclerview:recyclerview-selection:1.1.0"
+    api 'com.google.code.gson:gson:2.8.7'
     api 'com.squareup.retrofit2:retrofit:2.9.0'
     api 'com.squareup.retrofit2:converter-gson:2.9.0'
     api 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     api 'com.jakewharton:disklrucache:2.0.2'
-    api 'io.reactivex.rxjava2:rxjava:3.0.13'
-    api('io.reactivex.rxjava2:rxandroid:3.0.0', {
-        exclude group: 'io.reactivex.rxjava2', module: 'rxjava'
+    api 'io.reactivex.rxjava3:rxjava:3.0.13'
+    api('io.reactivex.rxjava3:rxandroid:3.0.0', {
+        exclude group: 'io.reactivex.rxjava3', module: 'rxjava'
     })
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    api 'com.squareup.picasso:picasso:2.71828'
+    api 'com.android.support:multidex:1.0.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
